# renamer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  config.yaml  docker-compose.yml  go.mod  go.sum  main.go  rest.http
.github/workflows/: docker.yml
app/: app.go
config/: config.example.toml  config.go  config.yml
controller/: file_handing.go  file_handle.go  file_rename.go  remove_texts.go  replace_chinese.go
frontend/: components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  App.tsx  App.vue  main.ts  main.tsx  style.css  tailwind.css
frontend/src/api/: api.ts  index.ts  request.ts
frontend/src/components/: AppHeader.vue  Breadcrumb.vue  CommonHeader.vue  CopyMoveModal.vue  CreateDirModal.vue  CreateModal.vue  DeleteModal.vue  FolderTreeItem.vue  FormDialog.vue  Home.vue  Layout.vue  MoveModal.vue  OperationModal.vue  PreviewTable.vue  RemoveModal.vue  RenameModal.vue  SeriesTable.vue  TidyModal.vue
middleware/: cors.go  error_log.go
middlewares/: error_logger.go
model/: file_info.go  model.go
router/: router.go
src/: app.rs  config.rs  error.rs  extractors.rs  file_service.rs  handlers.rs  main.rs  middleware.rs  models.rs  renamer.rs  router.rs  rules.rs
utils/: copy_files.go  create_dirs.go  delete_files.go  element_repeat.go  extract_episode.go  get_files.go  move_files.go  remove_texts.go  rename_file.go  rename_files.go  replace_chinese.go  rules.go
(+69 files in other folders)
