[package]
name = "renamer"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
human_bytes = "0.4"
pinyin = "0.11"
regex = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "timeout",
  "compression-full",
  "catch-panic",
  "fs",
] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
cap-std = "4"
cap-fs-ext = "4"
toml = "1"
anyhow = "1"
